fix whitespace on mobile view
-html,body at top
-viewport meta max size correction

--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,14 @@ html {
 	color: #fff;
 }
 
+html,body {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
 *, *::before, *::after {
 	box-sizing: inherit;
 	font: inherit;
